# coggers

./: .gitignore  Cargo.toml  README.md  W.hs
src/: gen.rs  inference.rs  main.rs  parse.rs
